Updated JS; added preventDefault()

--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
     <body>
         <h1>And Now, the Weather</h1>
 
-        <form>
-            <input type="text" id="location" name="location" placeholder="City Name">
-            <button>Get Weather</button>
-        </form>
-        
-        <main id="users"></main>
+        <main id="weatherData">
+            <div id="container">
+
+            </div>
+
+            <form>
+                <input type="text" id="location" name="location" placeholder="City Name and Country Code">
+                <button>Get Weather</button>
+            </form>
+
+            
+        </main>
+
         <script src="index.js"></script>
     </body>
 </html>
