Updated styles in css, updated placeholder for input field in form, added spaces in js for temp

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
 
             <form>
-                <input type="text" id="location" name="location" placeholder="City Name and Country Code">
+                <input type="text" id="location" name="location" placeholder="Miami, US">
                 <button>Get Weather</button>
             </form>
 
